Fix R&R species listing in dark mode

--- a/scss/partials/_rnr.scss
+++ b/scss/partials/_rnr.scss
@@ -48,7 +48,6 @@
   }
 
   th[colspan] {
-    background: #fff;
-    color: #000;
+    background: rgba(255, 255, 255, 0.2);
   }
 }
